# simple-evals

./: README.md  common.py  demo.py  gpqa_eval.py  humaneval_eval.py  math_eval.py  mmlu_eval.py  pyproject.toml  requirements.txt  types.py
sampler/: chat_completion_sampler.py  hf_sampler.py
simple_evals/: gpqa_eval.py  healthbench_eval.py  healthbench_meta_eval.py  humaneval_eval.py  math_eval.py  mmlu_eval.py  simple_evals.py  simpleqa_eval.py
